{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 1571,
  "lineage": "868beab6-af03-df76-512e-d5111f4f087d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05ce34f668cbb6ea7",
            "domain": "vpc",
            "id": "eipalloc-05ce34f668cbb6ea7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-82-141-232.compute-1.amazonaws.com",
            "public_ip": "54.82.141.232",
            "public_ipv4_pool": "amazon",
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:ec2:us-east-1:846338211683:instance/i-095d485c90f2c69a6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-095d485c90f2c69a6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "public-bastion-host",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0794900e85458f5ec",
            "private_dns": "ip-10-0-1-190.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.190",
            "public_dns": "ec2-34-224-97-251.compute-1.amazonaws.com",
            "public_ip": "34.224.97.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04237b394c5efde63",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0bc43c4c505aee29e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de7e28818282ddc9",
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bc43c4c505aee29e"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.private-subnet-1a",
            "aws_subnet.private-subnet-1b",
            "aws_subnet.private-subnet-1c",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:internet-gateway/igw-0a1fb4cfae0b2f4af",
            "id": "igw-0a1fb4cfae0b2f4af",
            "owner_id": "846338211683",
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "vpc_id": "vpc-0edbb798a546f2858"
          },
          "dependencies": [
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:846338211683:loadbalancer/app/application-loadbalancer/b50dc62edbd14026",
            "arn_suffix": "app/application-loadbalancer/b50dc62edbd14026",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "application-loadbalancer-1447590518.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:846338211683:loadbalancer/app/application-loadbalancer/b50dc62edbd14026",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "application-loadbalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0003dc96b4b5f3172"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-050bc5eb5b376cdb2"
              },
              {
                "subnet_id": "subnet-05c868ad8036a949a"
              },
              {
                "subnet_id": "subnet-0de7e28818282ddc9"
              }
            ],
            "subnets": [
              "subnet-050bc5eb5b376cdb2",
              "subnet-05c868ad8036a949a",
              "subnet-0de7e28818282ddc9"
            ],
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "vpc_id": "vpc-0edbb798a546f2858",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.private-subnet-1a",
            "aws_subnet.private-subnet-1b",
            "aws_subnet.private-subnet-1c",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:846338211683:listener/app/application-loadbalancer/b50dc62edbd14026/6626698f30a71da0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:846338211683:targetgroup/alb-target-group/b07b7343e8e65ac3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:846338211683:listener/app/application-loadbalancer/b50dc62edbd14026/6626698f30a71da0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:846338211683:loadbalancer/app/application-loadbalancer/b50dc62edbd14026",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.alb_sg",
            "aws_subnet.private-subnet-1a",
            "aws_subnet.private-subnet-1b",
            "aws_subnet.private-subnet-1c",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "my_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:846338211683:targetgroup/alb-target-group/b07b7343e8e65ac3",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:846338211683:listener-rule/app/application-loadbalancer/b50dc62edbd14026/6626698f30a71da0/785d786580c5976d",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "application-loadbalancer-1447590518.us-east-1.elb.amazonaws.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:846338211683:listener-rule/app/application-loadbalancer/b50dc62edbd14026/6626698f30a71da0/785d786580c5976d",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:846338211683:listener/app/application-loadbalancer/b50dc62edbd14026/6626698f30a71da0",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_listener.alb_listener",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.alb_sg",
            "aws_subnet.private-subnet-1a",
            "aws_subnet.private-subnet-1b",
            "aws_subnet.private-subnet-1c",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:846338211683:targetgroup/alb-target-group/b07b7343e8e65ac3",
            "arn_suffix": "targetgroup/alb-target-group/b07b7343e8e65ac3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:846338211683:targetgroup/alb-target-group/b07b7343e8e65ac3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0edbb798a546f2858"
          },
          "dependencies": [
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05ce34f668cbb6ea7",
            "association_id": "eipassoc-07ce4aecb2e433b2b",
            "connectivity_type": "public",
            "id": "nat-07e4dfc86069d0037",
            "network_interface_id": "eni-070e3f986bbb308d8",
            "private_ip": "10.0.1.223",
            "public_ip": "54.82.141.232",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0de7e28818282ddc9",
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            }
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:route-table/rtb-00c00854ac5b78455",
            "id": "rtb-00c00854ac5b78455",
            "owner_id": "846338211683",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07e4dfc86069d0037",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0edbb798a546f2858"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:route-table/rtb-07d2f7a53d0d8041c",
            "id": "rtb-07d2f7a53d0d8041c",
            "owner_id": "846338211683",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a1fb4cfae0b2f4af",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0edbb798a546f2858"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd4735510d1d77c3",
            "route_table_id": "rtb-00c00854ac5b78455",
            "subnet_id": "subnet-05569ddeb70959bd6"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.rtb-internal",
            "aws_subnet.private-subnet-1a",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_private_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f94b932d2e5354ba",
            "route_table_id": "rtb-00c00854ac5b78455",
            "subnet_id": "subnet-050bc5eb5b376cdb2"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.rtb-internal",
            "aws_subnet.private-subnet-1b",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_private_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092f945c5f9ed94d5",
            "route_table_id": "rtb-00c00854ac5b78455",
            "subnet_id": "subnet-05c868ad8036a949a"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.rtb-internal",
            "aws_subnet.private-subnet-1c",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0092a2285b7d50e7c",
            "route_table_id": "rtb-07d2f7a53d0d8041c",
            "subnet_id": "subnet-0de7e28818282ddc9"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rtb-public",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:security-group/sg-0003dc96b4b5f3172",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "10.0.3.0/24",
                  "10.0.4.0/24",
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0003dc96b4b5f3172",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/16",
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24",
                  "10.0.4.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/16",
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24",
                  "10.0.4.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "application_loadbalancer_sg",
            "name_prefix": "",
            "owner_id": "846338211683",
            "revoke_rules_on_delete": false,
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0edbb798a546f2858"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private-subnet-1a",
            "aws_subnet.private-subnet-1b",
            "aws_subnet.private-subnet-1c",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:security-group/sg-0bc43c4c505aee29e",
            "description": "Allow SSH inbound traffic bastion_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "10.0.3.0/24",
                  "10.0.4.0/24",
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "10.0.3.0/24",
                  "10.0.4.0/24",
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "id": "sg-0bc43c4c505aee29e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.2.0/24",
                  "10.0.3.0/24",
                  "10.0.4.0/24",
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "bastion_security_group",
            "name_prefix": "",
            "owner_id": "846338211683",
            "revoke_rules_on_delete": false,
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0edbb798a546f2858"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private-subnet-1a",
            "aws_subnet.private-subnet-1b",
            "aws_subnet.private-subnet-1c",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgres_aurora_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:security-group/sg-0ac67b9555fc81e69",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "10.0.3.0/24",
                  "10.0.4.0/24",
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac67b9555fc81e69",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "10.0.2.0/24",
                  "10.0.3.0/24",
                  "10.0.4.0/24",
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "security_rds_cluster",
            "name_prefix": "",
            "owner_id": "846338211683",
            "revoke_rules_on_delete": false,
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0edbb798a546f2858"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private-subnet-1a",
            "aws_subnet.private-subnet-1b",
            "aws_subnet.private-subnet-1c",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:security-group/sg-005fe67caa4a77f9e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005fe67caa4a77f9e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24",
                  "10.0.4.0/24"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bc43c4c505aee29e"
                ],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "redis_sg",
            "name_prefix": "",
            "owner_id": "846338211683",
            "revoke_rules_on_delete": false,
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0edbb798a546f2858"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.private-subnet-1a",
            "aws_subnet.private-subnet-1b",
            "aws_subnet.private-subnet-1c",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_private_eks_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:security-group/sg-0c4a94d09c631b362",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "10.0.3.0/24",
                  "10.0.4.0/24",
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "10.0.3.0/24",
                  "10.0.4.0/24",
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "10.0.3.0/24",
                  "10.0.4.0/24",
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "id": "sg-0c4a94d09c631b362",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "10.0.2.0/24",
                  "10.0.3.0/24",
                  "10.0.4.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Security group private eks node",
            "name_prefix": "",
            "owner_id": "846338211683",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0edbb798a546f2858"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private-subnet-1a",
            "aws_subnet.private-subnet-1b",
            "aws_subnet.private-subnet-1c",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:subnet/subnet-05569ddeb70959bd6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05569ddeb70959bd6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "846338211683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "vpc_id": "vpc-0edbb798a546f2858"
          },
          "dependencies": [
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:subnet/subnet-050bc5eb5b376cdb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050bc5eb5b376cdb2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "846338211683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "vpc_id": "vpc-0edbb798a546f2858"
          },
          "dependencies": [
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:subnet/subnet-05c868ad8036a949a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c868ad8036a949a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "846338211683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "vpc_id": "vpc-0edbb798a546f2858"
          },
          "dependencies": [
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:subnet/subnet-0de7e28818282ddc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de7e28818282ddc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "846338211683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "vpc_id": "vpc-0edbb798a546f2858"
          },
          "dependencies": [
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846338211683:vpc/vpc-0edbb798a546f2858",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a259bd49c1e18b00",
            "default_route_table_id": "rtb-09fed23825c455aa2",
            "default_security_group_id": "sg-06bd5134bb5465708",
            "dhcp_options_id": "dopt-045b51ee7bb08e632",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0edbb798a546f2858",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09fed23825c455aa2",
            "owner_id": "846338211683",
            "tags": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            },
            "tags_all": {
              "description": "managed by terraform provisioning",
              "name": "terraform project"
            }
          }
        }
      ]
    }
  ]
}